2006-06-25 09:32  tag qopqdp0-7-0

2006-06-25 09:32  osborn

	* NEWS, aclocal.m4, configure, configure.ac,
	  examples/asqtad_force_bench.c, examples/asqtad_invert_bench.c,
	  examples/asqtad_test.c, examples/dw_invert_bench.c,
	  examples/wilson_invert_bench.c, examples/wilson_test.c,
	  include/qop.h, include/qop_internal.h, include/qop_qdp.h,
	  lib/asqtad_force_p.c, lib/asqtad_invert_p.c, lib/common.c,
	  lib/dw_invert_p.c, lib/wilson_invert_p.c: Updated API to new
	  standard.  Changed gamma sign conventions to work with QLA-1.6.0.
	  Must use QLA >= 1.6.0 now in order to agree with Chroma.

2006-05-04 16:12  tag qopqdp0-6-5

2006-05-04 16:12  osborn

	* examples/test_common.h: Include qmp.h in examples.

2006-05-04 16:09  osborn

	* configure, configure.ac, examples/asqtad_invert_bench.c,
	  examples/dw_invert_bench.c, examples/wilson_invert_bench.c,
	  lib/wilson_invert_p.c: Fixed wrong result in Wilson inverter.

2006-04-15 23:01  osborn

	* configure, configure.ac, include/qop_internal_p.h,
	  lib/asqtad_invert_p.c, lib/invert_cg_p.c, lib/wilson_invert_p.c:
	  Made asqtad and wilson inverters reuse shifts better.

2006-04-14 16:21  osborn

	* configure, configure.ac, lib/dw_invert_p.c,
	  lib/wilson_invert_p.c: Fixed memory leak in Wilson inverter.

2006-04-04 01:44  osborn

	* examples/asqtad_invert_bench.c, lib/wilson_invert_p.c: Minor
	  fixes.

2006-03-14 14:32  osborn

	* configure, configure.ac: Added CC, ect. to
	  DISTCHECK_CONFIGURE_FLAGS.

2006-03-14 13:51  osborn

	* include/Makefile.am: Added generic headers to Makefile.am.

2006-03-14 13:48  osborn

	* configure, configure.ac, examples/asqtad_invert_bench.c,
	  examples/dw_invert_bench.c, examples/wilson_invert_bench.c: Allow
	  selection of style in benchmarks.  Update version.

2006-03-13 19:54  osborn

	* AUTHORS, configure, configure.ac, examples/Makefile.am,
	  examples/asqtad_invert_bench.c, examples/dw_invert_bench.c,
	  examples/wilson_invert_bench.c, include/generic_D.h,