@@ -1,4 +1,30 @@
 <table border=0>
+<tr>
+<td colspan=4 bgcolor=lightblue><b>2006-09-26</b>
+<tr bgcolor=lightgrey>
+<td>23:09
+<td>osborn
+<td>
+AUTHORS
+1.4<br>
+NEWS
+1.3<br>
+configure
+1.13<br>
+configure.ac
+1.14<br>
+examples/Makefile.am
+1.8<br>
+include/qop.h
+1.11<br>
+lib/Makefile.am
+1.9<br>
+lib/asqtad_force_p.c
+1.3<br>
+<td>Fixed int overflow in asqtad force flops calculation.
+Added gauge force code.
+</tr>
+
 <tr bgcolor=lightgreen>
 <td>13:32
 <td><td>
@@ -6,7 +32,7 @@
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-06-25</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>13:32
 <td>osborn
 <td>
@@ -58,7 +84,7 @@ Must use QLA &gt;= 1.6.0 now in order to agree with Chroma.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-05-04</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>20:12
 <td>osborn
 <td>
@@ -67,7 +93,7 @@ examples/test_common.h
 <td>Include qmp.h in examples.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:09
 <td>osborn
 <td>
@@ -88,7 +114,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-16</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>03:01
 <td>osborn
 <td>
@@ -109,7 +135,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-14</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:21
 <td>osborn
 <td>
@@ -126,7 +152,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-04</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:44
 <td>osborn
 <td>
@@ -139,7 +165,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-03-14</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:32
 <td>osborn
 <td>
@@ -150,7 +176,7 @@ configure.ac
 <td>Added CC, ect. to DISTCHECK_CONFIGURE_FLAGS.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:51
 <td>osborn
 <td>
@@ -159,7 +185,7 @@ include/Makefile.am
 <td>Added generic headers to Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:48
 <td>osborn
 <td>
@@ -176,7 +202,7 @@ examples/wilson_invert_bench.c
 <td>Allow selection of style in benchmarks.  Update version.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>00:54
 <td>osborn
 <td>
@@ -241,7 +267,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-09</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:05
 <td>osborn
 <td>
@@ -254,7 +280,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-03</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:23
 <td>osborn
 <td>
@@ -265,7 +291,7 @@ lib/wilson_invert_f.c
 <td>Added missing files.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:21
 <td>osborn
 <td>
@@ -305,7 +331,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-01-13</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:12
 <td>osborn
 <td>
@@ -314,7 +340,7 @@ lib/Makefile.am
 <td>Fixed lib Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:55
 <td>osborn
 <td>
@@ -359,7 +385,7 @@ lib/wilsonp.c
 <td>Moved many files around.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:50
 <td>osborn
 <td>
@@ -390,7 +416,7 @@ lib/common.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-29</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:17
 <td>osborn
 <td>
@@ -429,7 +455,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-16</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:47
 <td>osborn
 <td>
@@ -440,7 +466,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-15</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:23
 <td>osborn
 <td>
@@ -461,7 +487,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-12</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>06:16
 <td>osborn
 <td>
@@ -472,7 +498,7 @@ lib/wilsonp.c
 <td>Changed Wilson inverter code.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:41
 <td>osborn
 <td>
@@ -509,7 +535,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-08</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>01:03
 <td>osborn
 <td>
@@ -532,7 +558,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-01</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>02:02
 <td>osborn
 <td>
@@ -543,7 +569,7 @@ examples/asqtad_test.c
 <td>Small change in test, reran aotoreconf.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>01:51
 <td>osborn
 <td>
@@ -560,7 +586,7 @@ lib/asqtadp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-29</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:26
 <td>osborn
 <td>
@@ -571,7 +597,7 @@ include/qop.h
 <td>Fixed flop bug.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:58
 <td>osborn
 <td>
@@ -580,7 +606,7 @@ examples/asqtad_test.c
 <td>Small change to test program output.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>22:52
 <td>osborn
 <td>
@@ -595,7 +621,7 @@ lib/asqtadp.c
 <td>Added new style of dslash and optimization options.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>19:24
 <td>osborn
 <td>
@@ -606,7 +632,7 @@ lib/asqtadp.c
 <td>More changes to test program.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:34
 <td>osborn
 <td>
@@ -615,7 +641,7 @@ examples/asqtad_test.c
 <td>Changes in test program.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>17:36
 <td>osborn
 <td>
@@ -630,7 +656,7 @@ examples/asqtad_test.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-27</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>03:26
 <td>osborn
 <td>
@@ -686,4 +712,4 @@ lib/asqtadp.c
 </tr>
 
 </table>
-<p>This page was created on Tue Sep 26 18:12:25 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
+<p>This page was created on Tue Sep 26 19:12:47 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
