@@ -1,3 +1,10 @@
+2006-09-26 19:09  osborn
+
+	* AUTHORS, NEWS, configure, configure.ac, examples/Makefile.am,
+	  include/qop.h, lib/Makefile.am, lib/asqtad_force_p.c: Fixed int
+	  overflow in asqtad force flops calculation.  Added gauge force
+	  code.
+
 2006-06-25 09:32  tag qopqdp0-7-0
 
 2006-06-25 09:32  osborn
